# awase

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  clippy.toml  config.sample.toml  config.toml  config.toml.sample  design-2.md  design.md  gomi  mise.toml  repomix-output.xml
.cargo/: config.toml  mutants-awase-windows.toml  mutants.toml
.claude/rules/: experiment-logging.md  fix-requires-evidence.md  ime-belief-architecture.md  tuning-constants.md  worktree-per-session.md
.githooks/: pre-push
crates/awase-linux/: Cargo.toml
crates/awase-linux/src/: event_loop.rs  hook.rs  ime.rs  lib.rs  libinput.rs  main.rs  output.rs  scanmap.rs  tray.rs  vk.rs  x11.rs
crates/awase-macos/: Cargo.toml
crates/awase-macos-probe/: .gitignore  Cargo.toml
crates/awase-macos-probe/packaging/: Info.plist  README.md  build_probe_app.sh  distribute.sh  notarize.sh
crates/awase-macos-probe/src/: focus.rs  input_source.rs  keys.rs  layout_probe.rs  lib.rs  main.rs  output.rs  permissions.rs  report.rs  runtime.rs  sleep_wake.rs  synthetic.rs  tap.rs  tis_sys.rs
crates/awase-macos-probe/tests/: multi_instance.rs
crates/awase-macos/src/: event_loop.rs  hook.rs  ime.rs  lib.rs  main.rs  output.rs  scanmap.rs  tray.rs  vk.rs
crates/awase-settings/: Cargo.toml
crates/awase-settings/src/: main.rs
crates/awase-windows/: Cargo.toml
crates/awase-windows/src/: app.rs  autostart.rs  executor.rs  gji.rs  hook.rs  ime.rs  ime_controller.rs  ime_diagnostic.rs  ime_observations.rs  imm.rs  input_defer.rs  journal.rs  keymap.rs  lib.rs  main.rs  msime.rs  msime_key_assignment.rs  output.rs  panic_detect.rs  platform.rs  runtime.rs  scanmap.rs  single_thread_cell.rs  timer.rs  timing.rs  tray.rs  tsf_observations.rs  tuning.rs  vk.rs  win32.rs
crates/awase-windows/src/app/: bootstrap.rs  key_pipeline.rs  message_handlers.rs  mod.rs  panic_detect.rs
crates/awase-windows/src/focus/: cache.rs  class_names.rs  classifier.rs  classify.rs  current.rs  hwnd_cache.rs  imm_learning.rs  kind_classifier.rs  kinds.rs  mod.rs  msaa.rs  probe.rs  tracker.rs  uia.rs
crates/awase-windows/src/gui/: main.rs
crates/awase-windows/src/observer/: focus_observer.rs  gji_observer.rs  ime_observer.rs  mod.rs
crates/awase-windows/src/output/: ime_apply_planner.rs  key_injector.rs  mod.rs  probe_io.rs  resolve.rs  sender.rs  tsf_warmup_coord.rs  types.rs  vk_send.rs
crates/awase-windows/src/runtime/: executor.rs  focus_tracker.rs  focus_tracking.rs  ime_coordinator.rs  ime_refresh.rs  key_pipeline.rs  message_handlers.rs  mod.rs  outbox.rs  refresh_scheduler.rs  transport.rs
crates/awase-windows/src/state/: app_ime_policy.rs  belief.rs  conv_classifier.rs  conv_classify.rs  conv_mode.rs  eisu_recovery.rs  force_guard.rs  hook_state.rs  ime_decision_view.rs  ime_event.rs  ime_event_log.rs  ime_model.rs  input_barrier.rs  key_sequence_policy.rs  mod.rs  observation_store.rs  platform_state.rs  preconditions.rs  probe_admission.rs  transition.rs
crates/awase-windows/src/tsf/: belief.rs  chrome_gji_reinit_fsm.rs  chrome_probe.rs  cold_warmup.rs  composition_fsm.rs  gate.rs  gji_fsm.rs  gji_monitor.rs  gji_warmup_coro.rs  gji_warmup_fsm.rs  ime_mode_fsm.rs  ime_offon_warmup_coro.rs  key_seq.rs  last_apply.rs  literal_detect_fsm.rs  mod.rs  observer.rs  output.rs  probe.rs  probe_bridge.rs  probe_fsm.rs  raw_literal.rs  sacr_warmup_coro.rs  sacr_warmup_fsm.rs  send.rs  step_coro.rs  tickable_fsm.rs  tip_detector.rs  tsf_gate.rs  unicode_cold_warmup_fsm.rs  unicode_literal_observer.rs  warmup_strategy.rs  win_event_obs.rs
crates/awase-windows/src/tsf/warmup/: chrome_probe.rs  cold_warmup.rs  gji_warmup_coro.rs  ime_offon_warmup_fsm.rs  literal_detect_fsm.rs  mod.rs  ms_ime_ready_coro.rs  probe_fsm.rs  sacr_warmup_coro.rs  tickable_fsm.rs  unicode_cold_warmup_fsm.rs  unicode_literal_observer.rs  warmup_strategy.rs
crates/awase-windows/tests/: architecture_guard.rs  e2e_windows.rs  golden_scenarios.rs  ime_key_sequence_golden.rs  journal_replay.rs  layer_boundary_guard.rs
crates/awase-windows/tests/golden/: ime_key_sequences.txt
crates/awase-windows/tests/journals/: example-jiskana-recovery.json  jiskana-vk-kana-injection.json
crates/awase-yab-editor/: Cargo.toml
crates/awase-yab-editor/src/: main.rs
crates/timed-fsm/: Cargo.toml  HOLDINGGATE.md  README.md
crates/timed-fsm/examples/: debounce.rs  double_click.rs
crates/timed-fsm/src/: clock.rs  coro.rs  dispatch.rs  gate.rs  lib.rs  machine.rs  parser.rs  response.rs  tokio_support.rs
crates/timed-fsm/tests/: proptest.rs
crates/win32-async/: Cargo.toml
crates/win32-async/src/: atomic_watcher.rs  lib.rs  offload.rs  race_timeout.rs  single_thread_cell.rs  sleep.rs  thread_timeout.rs  win_event.rs
crates/win32-worker/: Cargo.toml  README.md
crates/win32-worker/src/: lib.rs
docs/: CNAME  app-onboarding-checklist.md  changelog.en.html  changelog.html  design-2.md  design.md  experiments.md  ime-control-overview.md  index.en.html  index.html  internals.en.html  internals.html  journal-replay-guide.md  known-bugs.md  layer-boundaries.md  smoke-testing-guide.md  usage.en.html  usage.html  windows-api-constraints.md  workarounds.md
layout/: nicola.yab  nicola_us.yab
lints/ime_event_guard/: Cargo.toml
lints/ime_event_guard/src/: lib.rs
lints/ime_event_guard/ui/: main.rs  main.stderr
lints/no_vk_as_scan/: Cargo.toml  rust-toolchain
lints/no_vk_as_scan/src/: lib.rs
lints/no_vk_as_scan/ui/: main.rs  main.stderr
lints/observation_source_guard/: Cargo.toml
lints/observation_source_guard/src/: lib.rs
lints/observation_source_guard/ui/: main.rs  main.stderr
scripts/: gen_changelog.py  install.ps1  run-e2e.ps1  scan_dead_fields.py  smoke-matrix.ps1  uninstall.ps1
src/: app_state.rs  config.rs  executor.rs  gate.rs  hook.rs  ime.rs  kana_table.rs  key_buffer.rs  lib.rs  main.rs  ngram.rs  output.rs  paths.rs  platform.rs  runtime.rs  scanmap.rs  single_thread_cell.rs  tray.rs  tsf.rs  types.rs  vk.rs  win32.rs
tests/: e2e_windows.rs  scenarios.rs
wix/: main.wxs
(+135 files in other folders)
