[workspace]
members = [".", "crates/timed-fsm"]

[package]
name = "awase"
version = "0.1.0"
edition = "2021"
description = "A simultaneous-keystroke keyboard remapper for NICOLA thumb shift and beyond"
repository = "https://github.com/cuzic/awase"
license = "MIT OR Apache-2.0"

[lib]
name = "awase"
path = "src/lib.rs"

[[bin]]
name = "awase"
path = "src/main.rs"
required-features = ["windows-bin"]

[[bin]]
name = "awase-settings"
path = "src/gui/main.rs"
required-features = ["gui"]

[features]
# The binary requires the `windows` crate which is Windows-only.
# Enable this feature to build the binary (automatic on Windows via default).
windows-bin = []
gui = ["eframe"]
default = ["windows-bin"]

[dependencies]
eframe = { version = "0.31", optional = true }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
timed-fsm = { path = "crates/timed-fsm" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Variant",
]

[lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# 最大限厳しい lint グループを有効化
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# cargo メタデータ関連は crates.io 公開時に対応する（現時点では不要）
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# 日本語コメントで誤検知するため無効化
doc_markdown = "allow"
