[package]
name = "awase-linux"
version = "0.1.0"
edition = "2021"

[lib]
name = "awase_linux"
path = "src/lib.rs"

[[bin]]
name = "awase"
path = "src/main.rs"

[dependencies]
awase = { path = "../.." }
timed-fsm = { path = "../timed-fsm" }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
nix = { version = "0.29", features = ["ioctl", "poll", "time", "fs", "event"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }

[lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# 最大限厳しい lint グループを有効化
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# cargo メタデータ関連は crates.io 公開時に対応する（現時点では不要）
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# 日本語コメントで誤検知するため無効化
doc_markdown = "allow"
