[package]
name = "awase-settings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "awase-settings"
path = "src/main.rs"

[dependencies]
awase = { path = "../.." }
eframe = "0.31"
log = "0.4"
toml = "0.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
doc_markdown = "allow"
