[package]
name = "awase-settings"
version = "1.1.1"
edition = "2024"

[[bin]]
name = "awase-settings"
path = "src/main.rs"

[dependencies]
awase = { path = "../.." }
eframe = "0.31"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
rfd = "0.17.2"
toml = "0.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
doc_markdown = "allow"
