[package]
name = "awase-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "awase_windows"
path = "src/lib.rs"

[[bin]]
name = "awase"
path = "src/main.rs"

[[bin]]
name = "awase-gji-setup"
path = "src/bin/gji_setup.rs"

[dependencies]
awase = { path = "../.." }
timed-fsm = { path = "../timed-fsm", version = "0.2.0" }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
toml = "0.8"

[target.'cfg(windows)'.dependencies.win32-async]
path = "../win32-async"

[target.'cfg(windows)'.dependencies.win32-worker]
path = "../win32-worker"
version = "0.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
]

[lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
doc_markdown = "allow"
# `unreachable_pub` (Rust lint) と矛盾するため allow: pub(crate) モジュール内の pub(crate) アイテムは両方が矛盾して fire する
redundant_pub_crate = "allow"
