[package]
name = "awase-windows"
version = "1.7.0"
edition = "2021"

[lib]
name = "awase_windows"
path = "src/lib.rs"

[[bin]]
name = "awase"
path = "src/main.rs"


[dependencies]
awase = { path = "../.." }
timed-fsm = { path = "../timed-fsm", version = "0.3.0" }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
toml = "0.8"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
quanta = "0.12"

[target.'cfg(windows)'.dependencies.win32-async]
path = "../win32-async"

[target.'cfg(windows)'.dependencies.win32-worker]
path = "../win32-worker"
version = "0.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
]

[lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
doc_markdown = "allow"
# `unreachable_pub` (Rust lint) と矛盾するため allow: pub(crate) モジュール内の pub(crate) アイテムは両方が矛盾して fire する
redundant_pub_crate = "allow"
# Win32 内部 API 関数の全エラーパスを文書化するのは不要
missing_errors_doc = "allow"
# Windows 状態管理構造体は bool フラグが多数必要
struct_excessive_bools = "allow"
# 行数制限はコンパイラ向けロジックで越えることがある
too_many_lines = "allow"
# 内部コンストラクタの bool パラメータ
fn_params_excessive_bools = "allow"
# I/O 統計の u64 → f64 変換は許容精度
cast_precision_loss = "allow"
# 1.96 で新たに const 化可能と判断されたが、依存先が const でないため個別対応より blanket allow が安全
missing_const_for_fn = "allow"
