[package]
name = "timed-fsm"
version = "0.3.0"
edition = "2021"
description = "A timed finite state machine framework where timer commands are declarative transition outputs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cuzic/timed-fsm"
keywords = ["state-machine", "fsm", "timer", "event-driven"]
categories = ["data-structures"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
# 依存ゼロ

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# 他クレートのメタデータ・依存バージョン競合が揃うまで suppress
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
