[workspace]

[package]
name = "ime_event_guard"
version = "0.1.0"
authors = ["authors go here"]
description = "Flags ImeEvent::PanicReset / HwndCacheRestored construction outside their designated call sites"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "6.0.0"

[dev-dependencies]
dylint_testing = "6.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
