[workspace]

[package]
name = "no_vk_as_scan"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "6.0.0"

[dev-dependencies]
dylint_testing = "6.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
