[workspace]

[package]
name = "observation_source_guard"
version = "0.1.0"
authors = ["authors go here"]
description = "Flags ImeEvent::InputModeObserved construction with a disguised ObservationSource outside its designated call site"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "6.0.0"

[dev-dependencies]
dylint_testing = "6.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
